Bug 351736 address book card preview pane problem in high contrast mode. r=philringnalda,ui-review=clarkbw

--- a/mail/themes/gnomestripe/mail/addrbook/addressbook.css
+++ b/mail/themes/gnomestripe/mail/addrbook/addressbook.css
@@ -263,7 +263,8 @@ treechildren::-moz-tree-image(GeneratedName, MailList) {
   -moz-user-focus: ignore;
   overflow: auto;
   min-width: 150px;
-  background-color: #FFFFFF;
+  background-color: -moz-Field;
+  color: -moz-FieldText;
 }
 
 #CardViewInnerBox {
@@ -275,7 +276,7 @@ treechildren::-moz-tree-image(GeneratedName, MailList) {
 #CardTitle {
   font-size: 150%;
   font-weight: bold;
-  border-bottom: 2px solid black;
+  border-bottom: 2px solid -moz-FieldText;
   min-width: 120px;
   margin: 0px;
 }
@@ -309,8 +310,7 @@ treechildren::-moz-tree-image(GeneratedName, MailList) {
 }
 
 .CardViewLink {
-  color: blue;
-  text-decoration: underline;
+  color: -moz-nativehyperlinktext;
   cursor: pointer;
 }
 
@@ -322,6 +322,7 @@ html|a {
   -moz-padding-start: 0px;
   -moz-padding-end: 2px;
   border: none !important;
+  text-decoration: underline;
 }
 
 html|p {
