--- a/mail/themes/pinstripe/mail/addrbook/addressbook.css
+++ b/mail/themes/pinstripe/mail/addrbook/addressbook.css
@@ -440,12 +440,8 @@ spacer {
 }
 
 .CardViewLink {
+  color: -moz-nativehyperlinktext;
   cursor: pointer;
-}
-
-.CardViewLink:hover {
-  color: blue;
-  text-decoration: underline !important;
 }
 
 #cvHomeMapIt, #cvWorkMapIt {
@@ -457,6 +453,7 @@ html|a {
   -moz-padding-start: 0px;
   -moz-padding-end: 2px;
   border: none !important;
+  text-decoration: underline;
 }
 
 html|p {
